--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1 {
     justify-content: center;
     align-items: center;
     backface-visibility: hidden;
-    background-color: slateblue;
+    background-color: teal;
     border-radius: 5px;
     transition: transform 0.5s ease-in-out;
 }
@@ -85,6 +85,7 @@ h1 {
 
 .game__card.visible .card__front {
     transform: rotateY(0);
+    z-index: 1;
 }
 .card__front {
     transform: rotateY(180deg);
