--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: system-ui;
 }
 
 
@@ -12,7 +13,7 @@ html {
 h1 {
     text-align: center;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     font-size: 3rem;
     margin: 20px 0;
 }
@@ -27,7 +28,7 @@ h1 {
 }
 
 .game__info {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     font-size: 2rem;
     grid-column: 1 / -1;
     display: flex;
@@ -50,12 +51,6 @@ h1 {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-delay: 500ms;
-        /* -moz-animation-name: dance;
-        -moz-animation-duration: 1.5s;
-        -moz-animation-timing-function: linear;
-        -moz-animation-iteration-count: infinite;
-        -moz-animation-delay: 500ms; */
-
 }
 
 @keyframes dance {
@@ -89,10 +84,11 @@ h1 {
 
 .card__front {
     background-color: darkslateblue;
+    transform: rotateY(-180deg);
 }
 
 .game__card.visible .card__back {
-    transform: rotateY(-180deg);
+    transform: rotateY(180deg);
 
 }
 
@@ -100,10 +96,6 @@ h1 {
     transform: rotateY(0);
     z-index: 1;
 }
-.card__front {
-    transform: rotateY(180deg);
-}
-
 
 .card__face img {
     max-width: 100px;
@@ -125,6 +117,7 @@ h1 {
 @media screen and (max-width: 600px) {
     .game {
         grid-template-columns: repeat(2, auto);
+        margin: 10px;
     }
     .game__info {
         font-size: 1.3rem;
