--- a/style.css
+++ b/style.css
@@ -119,6 +119,34 @@ h1 {
 
 }
 
+.gotcha {
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-50%);
+}
+
+.gotcha.match {
+    animation-name: getMatch;
+    animation-duration: 1s;
+}
+
+@keyframes getMatch {
+    from {
+        opacity: 0;
+    }
+    to {
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+.gotcha img {
+    max-width: 200px;
+}
+
 footer {
     width: 100%;
     padding: 30px 0;
