--- a/style.css
+++ b/style.css
@@ -1,183 +1,200 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins';
 }
 
-
 html {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 body {
-    background-color: #d6e0f0;
+  background-color: #d6e0f0;
 }
 
 h1 {
-    text-align: center;
-    font-size: 3rem;
-    color: #393b44;
-    margin: 20px 0;
+  text-align: center;
+  font-size: 3rem;
+  color: #393b44;
+  margin: 20px 0;
 }
 
 .game {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    gap: 10px;
-    justify-content: center;
-    margin: 40px;
-    perspective: 500px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  gap: 10px;
+  justify-content: center;
+  margin: 40px;
+  perspective: 1000px;
 }
 
 .game__info {
-    font-size: 2rem;
-    grid-column: 1 / -1;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #30475e;
+  font-size: 2rem;
+  grid-column: 1 / -1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #30475e;
 }
 
 .game__card {
-    width: 125px;
-    height: 175px;
-    position: relative;
-    cursor: pointer;
-    transform-style: preserve-3d;
+  width: 125px;
+  height: 175px;
+  position: relative;
+  cursor: pointer;
+  transform-style: preserve-3d;
 }
-.game__card.visible, .game__card.matched {
-    cursor: default;
+.game__card.visible,
+.game__card.matched {
+  cursor: default;
 }
 
 .game__card.matched .card__face .card__value {
-    animation-name: dance;
-    animation-duration: 1.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-delay: 500ms;
+  animation-name: dance;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-delay: 500ms;
 }
 
 @keyframes dance {
-    0%, 100% {
-        transform: rotate(0);
-    }
-    25% {
-        transform: rotate(-30deg);
-    }
-    75% {
-        transform: rotate(30deg);
-
-    }
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(-30deg);
+  }
+  75% {
+    transform: rotate(30deg);
+  }
 }
 
 .card__face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    backface-visibility: hidden;
-    border-radius: 5px;
-    transition: transform 0.5s ease-in-out;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backface-visibility: hidden;
+  border-radius: 5px;
+  transition: transform 0.5s ease-in-out;
 }
 
 .card__back {
-    background-color: teal;
+  background-color: teal;
 }
 
 .card__front {
-    background-color: darkslateblue;
-    transform: rotateY(-180deg);
+  background-color: darkslateblue;
+  transform: rotateY(-180deg);
 }
 
 .game__card.visible .card__back {
-    transform: rotateY(180deg);
-
+  transform: rotateY(180deg);
 }
 
 .game__card.visible .card__front {
-    transform: rotateY(0);
-    z-index: 1;
+  transform: rotateY(0);
+  z-index: 1;
 }
 
 .card__face img {
-    max-width: 100px;
+  max-width: 100px;
 }
 
-.card__back img, .card__front .card__value {
-    transition: transform 0.3s;
+.card__back img,
+.card__front .card__value {
+  transition: transform 0.3s;
 }
 .card__back:hover img {
-    transform: rotate(7deg);
+  transform: rotate(7deg);
 }
 
 .card__front:hover .card__value {
-    transform: scale(1.1);
-
+  transform: scale(1.1);
 }
 
 .gotcha {
-    position: fixed;
-    top: 40%;
-    left: 45%;
-    display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  display: none;
+  pointer-events: none;
 }
 
 .gotcha.match {
-    animation-name: getMatch;
-    animation-duration: 0.8s;
-    animation-timing-function: ease-in-out;
-    display: block;
+  animation-name: getMatch;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  display: block;
 }
 
 @keyframes getMatch {
-    from {
-        opacity: 0;
-        transform: scale(0);
-    }
-    to {
-        opacity: 1;
-        transform: scale(1);
-    }
+  0% {
+    opacity: 0;
+    transform: scale(0) translateY(-40%);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1) translateY(-50%);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0) translateY((-40%));
+  }
 }
 
 .gotcha img {
-    max-width: 200px;
+  max-width: 200px;
 }
 
 footer {
-    width: 100%;
-    padding: 30px 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-} 
+  width: 100%;
+  padding: 30px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
 footer > div {
-    margin: 20px;
+  margin: 20px;
+  text-align: center;
 }
 
 footer a {
-    text-decoration: none;
-    color: darkslateblue;
-    font-weight: 600;
+  text-decoration: none;
+  color: darkslateblue;
+  font-weight: 600;
 }
 
-
 @media screen and (max-width: 600px) {
-    .game {
-        grid-template-columns: repeat(2, auto);
-        margin: 10px;
-    }
-    .game__info {
-        font-size: 1.3rem;
-    }
+  .game {
+    grid-template-columns: repeat(4, auto);
+    margin: 10px;
+  }
+  .game__info {
+    font-size: 1.3rem;
+  }
 
-    h1 {
-        font-size: 1.6rem;
-    }
+  .game__card {
+    width: 80px;
+    height: 80px;
+  }
 
+  .card__face img {
+    max-width: 60%;
+  }
+
+  .gotcha img {
+    max-width: 100px;
+  }
+
+  h1 {
+    font-size: 1.6rem;
+  }
 }
